--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   flex-direction: column;
 }
 
-.book-card {
+.card {
   margin-top: 50px;
   width: 300px;
   height: 120px;
@@ -19,14 +19,21 @@
   padding-left: 5px;
   margin-right: 20px;
 }
-
-.book-card-container {
+.card-container {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
 }
-.book-card-delete {
+.card-delete {
   width: 50%;
   margin-left: auto;
   margin-right: auto;
+}
+
+.stats {
+  width: 300px;
+  height: 200px;
+  margin-top: 20px;
+  border-radius: 10px;
+  border: solid 2px black;
 }
