--- a/style.scss
+++ b/style.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
 }
 
-.book-card {
+.card {
     margin-top: 50px;
     width: 300px;
     height: 120px;
@@ -18,11 +18,6 @@
     justify-content: center;
     padding-left: 5px;
     margin-right: 20px;
-}
-
-
-
-.book-card {
     
     &-container {
         display: flex;
@@ -37,5 +32,12 @@
     }
 }
 
+.stats {
+        width: 300px;
+        height: 200px;
+        margin-top: 20px;
+        border-radius: 10px;
+        border: solid 2px black;
+}
 
 
