--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@
 h1 {
   color: white;
   font-size: 30px;
-  font-family: Poppins, sans-serif;
 }
 
 #mybooks {
@@ -55,13 +54,26 @@ h1 {
   appearance: none;
   outline: none;
 }
+.form-read {
+  align-self: flex-start;
+  margin-left: 30px;
+  height: 30px;
+}
+.form-checkbox {
+  transform: scale(2);
+  margin-left: 5px;
+}
+.form-checkbox-text {
+  color: #BF1448;
+  margin-left: 10px;
+}
 
 #stats-container {
   align-items: center;
   justify-content: center;
 }
 
-#submit, .card-delete {
+#submit {
   display: flex;
   align-self: flex-end;
   justify-content: center;
@@ -76,27 +88,9 @@ h1 {
   font-size: 25px;
   cursor: pointer;
 }
-#submit:active, .card-delete:active {
+#submit:active {
   background-color: white;
   border: solid 2px #BF1448;
-  color: #BF1448;
-}
-
-.form-read {
-  align-self: flex-start;
-  margin-left: 30px;
-  height: 30px;
-}
-
-#read-checkbox {
-  transform: scale(2);
-  margin-left: 5px;
-  background-color: black;
-}
-
-#read-or-not {
-  padding-left: 10px;
-  font-size: 15px;
   color: #BF1448;
 }
 
@@ -132,12 +126,22 @@ h1 {
   flex-wrap: wrap;
   padding-top: 80px;
 }
+.card-fields {
+  display: flex;
+  flex-direction: column;
+}
 .card-delete {
-  width: 80px;
-  font-size: 25px;
+  background-color: #BF1448;
+  color: white;
   width: 50px;
   height: 50px;
   border-radius: 50%;
+  border: none;
+  font-size: 25px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .card-toggle {
   display: flex;
@@ -154,6 +158,11 @@ h1 {
   font-size: 15px;
   cursor: pointer;
 }
+.card-buttons {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
 
 .title, .author, .pages, .read {
   display: flex;
@@ -169,8 +178,54 @@ h1 {
   border: none;
 }
 
-.card-buttons {
+.toggle-off, .toggle-on {
+  position: relative;
+  width: 50px;
+  height: 20px;
+  background-color: white;
+  border-radius: 15px;
+  border: solid 2px #BF1448;
+  cursor: pointer;
+}
+.toggle-off-ball, .toggle-on-ball {
+  position: absolute;
+  top: 0.5px;
+  left: 1px;
+  padding: 2px;
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  background-color: #BF1448;
+  cursor: pointer;
+}
+
+.toggle-on {
+  background-color: #BF1448;
+}
+.toggle-on-ball {
+  background-color: white;
+  left: auto;
+  right: 1px;
+}
+
+.read-or-not {
+  color: #BF1448;
+  font-size: 20px;
+  margin-left: 10px;
+}
+
+.toggle-div {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
+  align-items: center;
+  align-self: center;
+}
+
+.delete-div {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  align-self: center;
 }
