--- a/style.css
+++ b/style.css
@@ -4,12 +4,17 @@
   font-family: Poppins, sans-serif;
 }
 
+h1 {
+  color: white;
+  font-size: 30px;
+}
+
 #sidebar {
   overflow-x: hidden;
   position: fixed;
   background-color: #BF1448;
   height: 100%;
-  width: 640px;
+  width: 600px;
   display: flex;
   flex-direction: column;
   padding-top: 80px;
@@ -18,13 +23,8 @@
   float: left;
 }
 
-h1 {
-  color: white;
-  font-size: 30px;
-}
-
 #mybooks {
-  margin-top: 80px;
+  margin-top: 30px;
 }
 
 #add-books, #stats-container {
@@ -32,7 +32,7 @@ h1 {
   display: flex;
   flex-direction: column;
   width: 475px;
-  height: 331px;
+  height: 300px;
   background-color: white;
   margin-top: 20px;
   justify-content: center;
@@ -228,4 +228,88 @@ h1 {
   justify-content: flex-end;
   align-items: center;
   align-self: center;
+}
+
+@media screen and (max-width: 500px) {
+  .main {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #sidebar {
+    width: 500px;
+    min-width: 500px;
+    float: none;
+    padding-left: 10px;
+    padding-right: 10px;
+    position: relative;
+    height: auto;
+  }
+
+  .card-container {
+    float: none;
+    flex-direction: column;
+    margin-left: 0px;
+    padding-left: 0px;
+  }
+
+  .card {
+    margin-left: 10px;
+    padding-left: 0px;
+    width: 475px;
+  }
+}
+@media screen and (max-width: 1259px) {
+  .main {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #sidebar {
+    width: 100%;
+    min-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    float: none;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    position: relative;
+    height: auto;
+  }
+
+  h1 {
+    text-align: center;
+  }
+
+  #add-books, #stats-container {
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  .card-container {
+    float: none;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 0px;
+    margin-top: 10px;
+    padding-top: 20px;
+    padding-left: 0px;
+  }
+
+  .card {
+    width: 450px;
+    margin-right: 0px;
+    margin-left: 0px;
+  }
+
+  .toggle-div {
+    margin-left: 30px;
+  }
+
+  .delete-div {
+    margin-right: 30px;
+  }
 }
