--- a/style.scss
+++ b/style.scss
@@ -9,22 +9,24 @@ $fontFamily: Poppins, sans-serif;
     font-family: $fontFamily;
 }
 
-h1 {
+.titles {
     color: $colorTwo;
     font-size: 30px;
+    padding-top: 30px;
 }
 
 #sidebar {
     overflow-x: hidden;
     position: fixed;
-    background-color: $colorOne;
-    height: 100%;
-    width: 600px;
     display: flex;
     flex-direction: column;
-    padding-top: 80px;
-    padding-bottom: 80px;
-    padding-left: 85px;
+    background-color: $colorOne;
+    height: 100%;
+    width: 480px;
+    padding-top: 0px;
+    padding-bottom: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
     float: left;
 }
 
@@ -32,19 +34,20 @@ h1 {
     margin-top: 30px;
 }
 
-#add-books {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    width: 475px;
-    height: 300px;
-    background-color: $colorTwo;
-    margin-top: 20px;
-    justify-content: center;
-    align-items: center;
-}
-
 .form {
+
+    &-container {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        width: 480px;
+        height: 300px;
+        background-color: $colorTwo;
+        margin-top: 20px;
+        padding-top: 20px;
+        justify-content: center;
+        align-items: center;
+    }
 
     &-input {
         width: 400px;
@@ -63,12 +66,6 @@ h1 {
         }
     }
 
-    &-read {
-        align-self: flex-start;
-        margin-left: 30px;
-        height: 30px;
-    }
-
     &-checkbox {
         transform: scale(2);
         margin-left: 5px;
@@ -80,24 +77,29 @@ h1 {
     }
 }
 
-#stats-container {
-    @extend #add-books;
+.checkbox-container { 
+    padding-left: 30px;
+}
+
+#checkbox-add-container {
+    display: flex;
+    flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;;
+    width: 100%;
+    height: auto;
 }
 
 #submit {
     display: flex;
-    align-self: flex-end;
     justify-content: center;
     align-items: center;
-    margin-right: 30px;
-    background-color: $colorOne;
-    color: $colorTwo;
     width: 50px;
     height: 50px;
-    border-radius: 50%;
+    background-color: $colorOne;
+    color: $colorTwo;
     border: none;
+    border-radius: 50%;
     font-size: 25px;
     cursor: pointer;
 
@@ -105,6 +107,34 @@ h1 {
         background-color: $colorTwo;
         border: solid 2px $colorOne;
         color: $colorOne;
+    }
+}
+
+#submit-div {
+    padding-right: 30px;
+}
+
+#stats-container {
+    @extend .form-container;
+    align-items: center;
+    justify-content: center;
+}
+
+#michel {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 150px;
+    height: 30px;
+    margin-top: 120px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: white;
+    border-radius: 10px;
+
+    & > a {
+        text-decoration: none;
+        color: inherit;
     }
 }
 
@@ -126,7 +156,7 @@ h1 {
     display: flex;
     flex-direction: column;
     padding: 10px;
-    margin-right: 50px;
+    margin: 5px;
     background-color: $colorTwo;
     justify-content: center;
     align-items: center;
@@ -134,11 +164,11 @@ h1 {
     margin-bottom: 20px;
 
     &-container {
-        margin-left: 725px;
-        padding-left: 50px;
         display: flex;
+        flex-direction: row;
         flex-wrap: wrap;
-        padding-top: 80px;
+        margin-left: 550px;
+        padding-top: 75px;
     }
 
     &-fields {
@@ -183,7 +213,7 @@ h1 {
     }
 }
 
-.title, .author, .pages, .read {
+.title, .author, .pages {
     display: flex;
     align-items: center;
     width: 400px;
@@ -234,7 +264,6 @@ h1 {
 .read-or-not {
     color: $colorOne;
     font-size: 20px;
-    margin-left: 10px;
 }
 
 .toggle-div {
@@ -253,7 +282,7 @@ h1 {
     align-self: center;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 980px) {
     .main {
         display: flex;
         flex-direction: column;
@@ -266,20 +295,24 @@ h1 {
         float: none;
         padding-left: 0px;
         padding-right: 0px;
-        padding-top: 30px;
-        padding-bottom: 30px;
+        padding-top: 0px;
+        padding-bottom: 20px;
         position: relative;
         height: auto;
         display: flex;
     }
 
-    h1 {
+    .titles {
         text-align: center;
     }
 
-    #add-books {
+    .form-container {
         margin-right: auto;
         margin-left: auto;
+    }
+
+    #mybooks {
+        margin-top: 20px;
     }
 
     .card-container {
@@ -291,7 +324,6 @@ h1 {
         margin-top: 10px;
         padding-top: 20px;
         padding-left: 0px;
-
     }
 
     .card {
@@ -307,10 +339,14 @@ h1 {
     .delete-div {
         margin-right: 30px;
     }
+
+    #michel {
+        margin-top: 20px;
+    }
     
 }
 
-@media screen and (min-width: 960px) and (max-width: 1259px) {
+@media screen and (min-width: 980px) and (max-width: 1259px) {
     .main {
         display: flex;
         flex-direction: column;
@@ -337,33 +373,34 @@ h1 {
         justify-content: space-around;
     }
 
-    h1 {
+    .titles {
         text-align: center;
     }
 
-    #add-books {
+    .form-container {
         margin-right: auto;
         margin-left: auto;
     }
 
     .card-container {
-        float: none;
-        flex-direction: row;
-        flex-wrap: wrap;
+        width: 100%;
+        min-width: 500px;
         margin-left: auto;
-        margin-right: auto; 
+        margin-right: auto;
+        float: none;
         padding-left: 0px;
-        margin-top: 10px;
-        padding-top: 20px;
-        padding-left: 0px;
+        padding-right: 0px;
+        padding-top: 30px;
+        padding-bottom: 30px;
+        position: relative;
+        height: auto;
         display: flex;
         flex-direction: row;
-        justify-content: space-a;
-
+        justify-content: space-evenly;
     }
 
     .card {
-        width: 450px;
+        width: 420px;
         margin-right: 0px;
         margin-left: 0px;
     }
@@ -374,5 +411,14 @@ h1 {
 
     .delete-div {
         margin-right: 30px;
+    }
+
+    #michel {
+        display: none;
+        align-self: flex-end;
+    }
+
+    #michel-footer {
+        display: flex;
     }
 }
