--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,17 @@ $colorTwo: white;
 $colorInput: #F4E7EB;
 $fontFamily: Poppins, sans-serif;
 
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    opacity: 1;
+}
+
 * {
     margin: 0;
     box-shadow: none;
@@ -37,6 +48,7 @@ $fontFamily: Poppins, sans-serif;
 .form {
 
     &-container {
+
         position: relative;
         display: flex;
         flex-direction: column;
@@ -115,9 +127,16 @@ $fontFamily: Poppins, sans-serif;
 }
 
 #stats-container {
-    @extend .form-container;
-    align-items: center;
-    justify-content: center;
+    position: relative;
+        display: flex;
+        flex-direction: column;
+        width: 480px;
+        height: 300px;
+        background-color: $colorTwo;
+        margin-top: 20px;
+        padding-top: 20px;
+        justify-content: center;
+        align-items: center;
 }
 
 #michel {
@@ -284,6 +303,24 @@ $fontFamily: Poppins, sans-serif;
     align-self: center;
 }
 
+.quit-button {
+    display: none;
+    justify-content: center;
+    align-self: flex-start;
+    margin-left: 32px;
+    margin-bottom: 20px;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    background-color: $colorOne;
+    color: $colorTwo;
+    border: none;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+
+
 @media screen and (max-width: 1000px) {
     .main {
         display: flex;
@@ -308,7 +345,34 @@ $fontFamily: Poppins, sans-serif;
         text-align: center;
     }
 
+    .add-book-title {
+        display: none;
+    }
+
+    .add-books-container {
+        display: none;
+        top: 0;
+        bottom: 0;
+        left: 0; 
+        right: 0; 
+        margin: auto auto auto auto; 
+        z-index: 10;
+        transform: scale(1.5);
+    }
+
     .form-container {
+        display: none;
+        top: 0;
+        bottom: 0;
+        left: 0; 
+        right: 0; 
+        margin: auto auto auto auto; 
+        z-index: 10;
+        transform: scale(1.5);
+    }
+
+    #stats-container{
+        display: flex;
         margin-right: auto;
         margin-left: auto;
     }
@@ -330,8 +394,8 @@ $fontFamily: Poppins, sans-serif;
 
     .card {
         width: 450px;
-        margin-right: 0px;
-        margin-left: 0px;
+        margin-right: auto;
+        margin-left: auto;
         padding-top: 30px;
     }
 
@@ -346,7 +410,30 @@ $fontFamily: Poppins, sans-serif;
     #michel {
         margin-top: 20px;
     }
-    
+
+    .form-pop-up {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: fixed;
+        bottom: 2vh;
+        right: 2vh;
+        height: 8vh;
+        width: 8vh;
+        background-color: $colorOne;
+        color: $colorTwo;
+        border-radius: 50%;
+        font-size: 4vh;
+        cursor: pointer;
+
+        &:active {
+            transform: scale(1.1);
+        }
+    }  
+
+    .quit-button {
+        display: flex;
+    }
 }
 
 @media screen and (min-width: 1000px) and (max-width: 1259px) {
@@ -383,6 +470,8 @@ $fontFamily: Poppins, sans-serif;
     .form-container {
         margin-right: auto;
         margin-left: auto;
+        display: flex;
+        position: relative;
     }
 
     .card-container {
@@ -404,8 +493,8 @@ $fontFamily: Poppins, sans-serif;
 
     .card {
         width: 420px;
-        margin-right: 0px;
-        margin-left: 0px;
+        margin-right: auto;
+        margin-left: auto;
         padding-top: 30px;
     }
 
