--- a/style.scss
+++ b/style.scss
@@ -418,12 +418,13 @@ $fontFamily: Poppins, sans-serif;
         position: fixed;
         bottom: 2vh;
         right: 2vh;
-        height: 8vh;
-        width: 8vh;
+        height: 6vh;
+        width: 6vh;
         background-color: $colorOne;
         color: $colorTwo;
         border-radius: 50%;
-        font-size: 4vh;
+        border: solid 2px $colorTwo;
+        font-size: 3vh;
         cursor: pointer;
 
         &:active {
@@ -437,8 +438,8 @@ $fontFamily: Poppins, sans-serif;
 
     #checkbox-add-container {
         padding-bottom: 20px;
-
     }
+
 }
 
 @media screen and (min-width: 1000px) and (max-width: 1259px) {
