--- a/style.css
+++ b/style.css
@@ -283,7 +283,7 @@
   display: none;
   justify-content: center;
   align-self: flex-start;
-  margin-left: 32px;
+  margin-left: 20px;
   margin-bottom: 20px;
   align-items: center;
   width: 30px;
@@ -336,6 +336,7 @@
 
   .form-container {
     display: none;
+    width: 700px;
     top: 0;
     bottom: 0;
     left: 0;
@@ -344,10 +345,41 @@
     z-index: 10;
   }
 
+  .form-input {
+    width: 650px;
+  }
+
+  .title {
+    width: 650px;
+  }
+
+  .author {
+    width: 650px;
+  }
+
+  .pages {
+    width: 650px;
+  }
+
   #stats-container {
     display: flex;
     margin-right: auto;
     margin-left: auto;
+    width: 700px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .checkbox-container {
+    padding-left: 20px;
+  }
+
+  #submit-div {
+    padding-right: 20px;
+  }
+
+  .stats {
+    width: 650px;
   }
 
   #mybooks {
@@ -366,7 +398,7 @@
   }
 
   .card {
-    width: 450px;
+    width: 700px;
     margin-right: auto;
     margin-left: auto;
     padding-top: 30px;
