now using class instead of plain constructor

--- a/style.scss
+++ b/style.scss
@@ -87,6 +87,10 @@ $fontFamily: Poppins, sans-serif;
             margin-left: 10px;
         }
     }
+
+    &-pop-up {
+        display: none;
+    }
 }
 
 .checkbox-container { 
