--- a/style.css
+++ b/style.css
@@ -135,8 +135,7 @@
   width: 150px;
   height: 30px;
   margin-top: 120px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
   background-color: white;
   border-radius: 10px;
 }
@@ -306,8 +305,7 @@
 
   #sidebar {
     width: 100%;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
     float: none;
     padding-left: 0px;
     padding-right: 0px;
@@ -366,8 +364,7 @@
 
   #stats-container {
     display: flex;
-    margin-right: auto;
-    margin-left: auto;
+    margin: auto;
     width: 700px;
     padding-left: 10px;
     padding-right: 10px;
@@ -392,8 +389,7 @@
   .card-container {
     float: none;
     flex-direction: column;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
     padding-left: 0px;
     margin-top: 10px;
     padding-top: 20px;
@@ -402,8 +398,7 @@
 
   .card {
     width: 700px;
-    margin-right: auto;
-    margin-left: auto;
+    margin: auto;
     padding-top: 30px;
   }
 
@@ -460,8 +455,7 @@
   #sidebar {
     width: 100%;
     min-width: 500px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
     float: none;
     padding-left: 0px;
     padding-right: 0px;
@@ -479,8 +473,7 @@
   }
 
   .form-container {
-    margin-right: auto;
-    margin-left: auto;
+    margin: auto;
     display: flex;
     position: relative;
   }
@@ -488,8 +481,7 @@
   .card-container {
     width: 100%;
     min-width: 500px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
     float: none;
     padding-left: 0px;
     padding-right: 0px;
@@ -504,8 +496,7 @@
 
   .card {
     width: 420px;
-    margin-right: auto;
-    margin-left: auto;
+    margin: auto;
     padding-top: 30px;
   }
 
